Version 1.1 Changelog:

- Fixed edge-case causing crash on record
- Fix bug where recorder records the same number of channels as there are hardware outputs.
- Added user configurable output channels
- Added sound file presets
- Fixed bug causing conflicts between saved preset maps
- Added control preference menu
- Added option to disable clipping (hard-limiting) of sound output
- Added option to change scan begin behavior
- Added MIDI control to Morph Time
- Improved int parameter snapping.
- Windows compilation instructions.
- BREAKING CHANGE FOR WINDOWS: Moved configuration folder from ~/EmissionControl2 -> ~/Music/EmissionControl2
  - Reasoning: Aligns with OSX Semantics.
  - Fix: Simply copy your folder to the new location if you want to save your presets and settings.

Version 1.2 Changelog:

- Added OSC support (see manual for documentation)
- Updated manual with OSC documentation
- BREAKING CHANGE FOR LINUX: fixed an issue with the saving of presets
  - Fix: run the script 'linux_preset_migrate.sh'